# facturai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
src/: auth.py  config.py  main.py  rate_limiter.py  stats.py
src/extraction/: claude_extractor.py  image_optimizer.py  pdf_processor.py  prompt.py
src/models/: invoice.py  response.py
src/validation/: __init__.py  validators.py
